[package]
name = "solwalrs"
description = "A simple and easy to use CLI Solana wallet"
license = "GPL-3.0-only"
repository = "https://github.com/TheAwiteb/solwalrs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["solana", "wallet", "cli"]
version = "0.2.0"
edition = "2021"

[dependencies]
base58 = "0.2.0"
base64 = "0.13.1"
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
fernet = "0.2.0"
rand = "0.7.3"
rpassword = "7.2.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sysexits = "0.3.4"
thiserror = "1.0.37"
